octsympy 2.3.0-dev
==================

  * New commands:

          cbrt
          chebyshevU
          chebyshevT
          fix
          frac
          intersect
          interval
          ismember
          finiteset
          has
          kron
          linspace
          logspace
          max
          min
          rewrite
          round
          union
          unique

  * Bug fix for working with certain unevaluated integrals.

  * Bug fixes for function_handle, fortran and ccode.

  * Bug fixes or improvements to repmat, reshape, python_cmd, factor,
    dot star, children.

  * Support for SymPy 1.0.

  * Errors raised in Python code are now caught and passed back to Octave
    in most cases.  This simplifies implementation.
      - Note some error messages have changed slightly.
      - Windows users now see previously hidden error messages.
    Thanks to @latot.

  * New functions for converting sym to integers.  Thanks to @latot.

  * Making a sym of a large integer like `sym(10^16)` gives a warning.
    Please use `sym(10)^16` or `sym('1000000000000123456789').

  * New functions for dealing with sets and intervals and operations
    on them, thanks to @latot.

  * Fourier and Laplace transforms (and their inverses) use a
    different implementation which improves handling of delta
    functions.  Ideally, a later version will consolidate this with
    SymPy's original implementations.

  * Python `None` can be returned and manipulated.

  * Documentation improvements.



octsympy 2.2.4 (2015-12-14)
===========================

  * Fix display on Octave 3.8.

  * Support for SymPy 0.7.6.1.



octsympy 2.2.3 (2015-11-25)
===========================

  * New commands:

          cross
          dot

  * sym('var') is more robust in case var happens to be a special
    value in SymPy.  Now sym('E') is just a symbol rather than
    exp(sym(1)).  Also sym('E1') and sym('Eq') no longer give errors.
